--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,11 +2,13 @@ body {
     margin: 100px;
 }
 h1 {
+    text-align: center;
     font-weight: bold;
     padding: 30px;
     border: 3px solid black;
 }
 h3 {
+    text-align: center;
     font-weight: bold;
     padding: 20px;
 }
@@ -16,20 +18,23 @@ h4 {
     border: 1px solid black;
 }
 .Dancing {
+    text-indent: 50px;
     font-family: "Dancing Script", cursive;
     font-size: large;
-    font-weight: bold;
+    font-weight: 500rem;
     line-height: 30px;
 }
 .Pacifico {
+    text-indent: 50px;
     font-family: "Pacifico", cursive;
     font-size: 15px;
-    font-weight: 2rem;
+    font-weight: 400rem;
     line-height: 30px;
 }
 .Yanone {
+    text-indent: 50px;
     font-family: "Yanone Kaffeesatz", sans-serif;
     font-size: 20px
-    font-weight: bold;
+    font-weight: 300rem;
     line-height: 30px;
 }
